# spotlight-windows

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  startup.py  test_ui.py
src/spotlight_windows/: __init__.py  __main__.py  app.py  calculator.py  config.py  fullscreen.py  hotkey.py  indexer.py  main.py  search.py
src/spotlight_windows/search/: app_discovery.py  indexer.py  models.py  service.py
src/spotlight_windows/ui/: __init__.py  launcher_window.py
