[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotlight-windows"
version = "0.1.0"
description = "Spotlight-like launcher for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "watchdog>=4.0",
  "rapidfuzz>=3.9",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.scripts]
spotlight-windows = "spotlight_windows.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
